--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TheEvent - Bootstrap Event Template</title>
+  <title>Career Connect</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -62,10 +62,10 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0">Career CONNECT<br><span>Marketing</span> Conference</h1>
-      <p class="mb-4 pb-0">10-12 December, Downtown Conference Center, New York</p>
-      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
-        data-autoplay="true"></a>
+      <h1 class="mb-4 pb-0"><img src="img/logo_main.png" style="width: 800px;" alt="" title=""><br> Connect</h1>
+      <p class="mb-4 pb-0">An Annual Flagship Event, 10-12 February, 2023</p>
+      <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+        data-autoplay="true"></a> -->
       <a href="#about" class="about-btn scrollto">About The Event</a>
     </div>
   </section>
@@ -80,17 +80,20 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>About The Event</h2>
-            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-              accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-              est ut optio sequi unde.</p>
+            <p>The Academics and Career Council is
+              organizing a three-day event,
+              CAREER CONNECT, on 10th-12th February
+              2023, for all the undergraduate and
+              postgraduate students.
+              </p>
           </div>
           <div class="col-lg-3">
             <h3>Where</h3>
-            <p>Downtown Conference Center, New York</p>
+            <p>Right Here at IITK</p>
           </div>
           <div class="col-lg-3">
             <h3>When</h3>
-            <p>Monday to Wednesday<br>10-12 December</p>
+            <p>Friday to Sunday<br>10-12 February</p>
           </div>
         </div>
       </div>
@@ -202,6 +205,114 @@
 
     </section>
 
+<!--==========================
+      Events Section
+    ============================-->
+    <section id="events" class="wow fadeInUp">
+      <div class="container">
+        <div class="section-header">
+          <h2>Planned Events</h2>
+          <p>We have a wide array of events planned just for you</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+              <div class="details">
+                <h3><a>Brenden Legros</a></h3>
+                <p>Quas alias incidunt</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>Hello thi si tesvuew ehbcwdyb ehbdey  dqyub dqydq ydw</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
+              <div class="details">
+                <h3><a>Hubert Hirthe</a></h3>
+                <p>Consequuntur odio aut</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
+              <div class="details">
+                <h3><a>Cole Emmerich</a></h3>
+                <p>Fugiat laborum et</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
+              <div class="details">
+                <h3><a>Jack Christiansen</a></h3>
+                <p>Debitis iure vero</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
+              <div class="details">
+                <h3><a>Alejandrin Littel</a></h3>
+                <p>Qui molestiae natus</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <div class="details">
+                <h3><a>Willow Trantow</a></h3>
+                <p>Non autem dicta</p>
+                <div class="social">
+                  <a href=""><i class="fa fa-twitter"></i></a>
+                  <a href=""><i class="fa fa-facebook"></i></a>
+                  <a href=""><i class="fa fa-google-plus"></i></a>
+                  <a href=""><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+
     <!--==========================
       Schedule Section
     ============================-->
@@ -224,8 +335,7 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-          necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+        <h3 class="sub-heading">Refer to the timings below to get the exact schedules</h3>
 
         <div class="tab-content row justify-content-center">
 
@@ -469,7 +579,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Gallery</h2>
-          <p>Check our gallery from the recent events</p>
+          <p>Check our gallery from previous years events</p>
         </div>
       </div>
 
@@ -510,7 +620,7 @@
 
         <div class="section-header">
           <h2>Contact Us</h2>
-          <p>Nihil officia ut sint molestiae tenetur.</p>
+          <p>We will answer any queries any time.</p>
         </div>
 
         <div class="row contact-info">
@@ -519,7 +629,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <address>KD107, KD Building, IIT Kanpur, 208016</address>
             </div>
           </div>
 
@@ -527,7 +637,13 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+918521251414">+91-8521251414</a>
+                </p>
+                <p>
+                <a href="tel:+918521251414">+91-7683069142</a>
+              </p><p><a href="tel:+918521251414">+91-6299873640</a>
+              </p><a href="tel:+918521251414">+91-9412616587</a></p>
+                
             </div>
           </div>
 
@@ -535,7 +651,9 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">info@example.com</a></p>
+              <p><a href="mailto:anciitk@gmail.com">anciitk@gmail.com</a></p>
+              <p><a href="mailto:ug_anc@iitk.ac.in">ug_anc@iitk.ac.in</a></p>
+              <p><a href="mailto:ug_anc@iitk.ac.in">pg_anc@iitk.ac.in</a></p>
             </div>
           </div>
 
@@ -583,7 +701,12 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="img/logo.png" alt="TheEvenet">
-            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p>
+            <p>The Academics and Career Council, IIT Kanpur is a body that
+              aims to foster career, academic, and research development
+              needs among the campus community with exposure to world
+              leaders, entrepreneurs, and other influential people to help
+              students navigate through times of uncertainties related to
+              their career choices and life goals.</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -602,19 +725,17 @@
           <div class="col-lg-3 col-md-6 footer-contact" style="position: absolute;right: 50px;">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              KD 107 <br>
+              IIT Kanpur, 208016<br>
+              U.P. India <br>
+              <strong>Phone:</strong> +91 7683-069142<br>
+              <strong>Email:</strong> anciitk@gmail.com<br>
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.facebook.com/ANCIITK/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/careerconnect.iitkanpur/" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/career-connect/" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
