Updates to events section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0"><img src="img/logo_main.png" style="width: 800px;" alt="" title=""><br> Connect</h1>
+      <h1 class="mb-4 pb-0"><img src="img/logo_main.png" style="max-width: 800px; min-width: 300;" alt="" title=""><br> Connect</h1>
       <p class="mb-4 pb-0">An Annual Flagship Event, 10-12 February, 2023</p>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a> -->
