--- a/index.html
+++ b/index.html
@@ -637,10 +637,10 @@
               <li><i class="fa fa-angle-right"></i> <a href="#schedule">Schedule</a></li>
             </ul>
           </div>
-
+<div style="width: 20%;"></div>
           
 
-          <div class="col-lg-3 col-md-6 footer-contact" style="position: absolute;right: 50px;">
+          <div class="col-lg-3 col-md-6 footer-contact" >
             <h4>Contact Us</h4>
             <p>
               KD 107 <br>
