--- a/index.html
+++ b/index.html
@@ -112,90 +112,110 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+              <img src="img\speakers\samarth_bansal.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Brenden Legros</a></h3>
-                <p>Quas alias incidunt</p>
+                <h3><a>Samarth Bansal</a></h3>
+                <p>Journalist, IIT Kanpur</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>Worked at Hindustan Times, Wall Street Journal</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
+              <img src="img\speakers\abhishek_dhandharia.jfif" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Hubert Hirthe</a></h3>
-                <p>Consequuntur odio aut</p>
+                <h3><a>Abhishek Dhandharia</a></h3>
+                <p>Founder, About Films</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>Angel Investor</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
+              <img src="img\speakers\n_sundararajan.jfif" alt="Speaker 3" style="height: 350px;" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Cole Emmerich</a></h3>
-                <p>Fugiat laborum et</p>
+                <h3><a href="speaker-details.html">N Sundararajan</a></h3>
+                <p>NTU Singapore</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>Electrical & Electronics Engineering (Retd.)</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="img\speakers\anant_ladha.png" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Jack Christiansen</a></h3>
-                <p>Debitis iure vero</p>
+                <h3><a href="speaker-details.html">Anant Ladha</a></h3>
+                <p>Founder, Invest Aaj for Kal</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>3x TedX Speaker, 2x JOSH Talk</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
+              <img src="img\speakers\annu_meena.png" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                <p>Qui molestiae natus</p>
+                <h3><a href="speaker-details.html">Anu Meena Malhotra</a></h3>
+                <p>Founder, Agrowave</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>Forbes 30U30</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
+              <img src="img\speakers\anup_garg.jfif" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
+                <h3><a href="speaker-details.html">Anup Garg</a></h3>
+                <p>Ex-Amazon</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a>IIT BHU</a>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="img\speakers\bharat_khanna.webp" alt="Speaker 4" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Bharat Khanna</a></h3>
+                  <p>Ex- Tower Research</p>
+                  <div class="social">
+                    <a>IIT BHU</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="img\speakers\shefali.jpg" alt="Speaker 5" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Shefali Vijaywargiya</a></h3>
+                  <p>Brand Manager, Amul</p>
+                  <div class="social">
+                    <a>Forbes 30U30</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="speaker">
+                <img src="img\speakers\Divas Gupta.png" alt="Speaker 6" class="img-fluid">
+                <div class="details">
+                  <h3><a href="speaker-details.html">Divas Gupta</a></h3>
+                  <p>Public Speaking Coach</p>
+                  <div class="social">
+                    <a>3x TedX Speaker</a>
+                    <a>Corporate Trainer at Fortune 500</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -347,7 +367,7 @@
               <div class="col-md-2"><time>5:30 PM onwards</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\n_sundararajan.jfif" alt="Brenden Legros">
                 </div>
                 <h4>How to Improve your Research Skills<span>&nbsp L-18</span></h4>
               </div>
@@ -357,7 +377,7 @@
               <div class="col-md-2"><time>6:00 PM - 7:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="img\speakers\abhishek_dhandharia.jfif" alt="Cole Emmerich">
                 </div>
                 <h4>Unorthodox Career Choices Panel<span> &nbsp L-19</span></h4>
               </div>
@@ -374,7 +394,7 @@
               <div class="col-md-2"><time>09:30-12:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\n_sundararajan.jfif" alt="Brenden Legros">
                 </div>
                 <h4>How to Improve your Research Skills<span>&nbsp L-18</span></h4>
               </div>
@@ -384,7 +404,7 @@
               <div class="col-md-2"><time>11:00 AM - 12:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\annu_meena.png" alt="Brenden Legros">
                 </div>
                 <h4>Women in Tech<span> &nbsp L-19</span></h4>
               </div>
@@ -394,7 +414,7 @@
               <div class="col-md-2"><time>2:00 PM - 3:30 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
+                  <img src="img\speakers\bharat_khanna.webp" alt="Hubert Hirthe">
                 </div>
                 <h4>Programming Pathshala Session  <span> &nbsp L-19</span></h4>
               </div>
@@ -404,7 +424,7 @@
               <div class="col-md-2"><time>2:30 PM -5:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\n_sundararajan.jfif" alt="Brenden Legros">
                 </div>
                 <h4>How to Improve your Research Skills<span>&nbsp L-18</span></h4>
               </div>
@@ -414,7 +434,7 @@
               <div class="col-md-2"><time>4:00 PM - 5:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/3.jpg" alt="Cole Emmerich">
+                  <img src="img\speakers\Divas Gupta.png" alt="Cole Emmerich">
                 </div>
                 <h4>Emerging Tech AI <span>&nbsp L-19</span></h4>
               </div>
@@ -432,7 +452,7 @@
               <div class="col-md-2"><time>09:30-12:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\n_sundararajan.jfif" alt="Brenden Legros">
                 </div>
                 <h4>How to Improve your Research Skills<span>&nbsp L-18</span></h4>
               </div>
@@ -452,7 +472,7 @@
               <div class="col-md-2"><time>11:30 AM - 1:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\Divas Gupta.png" alt="Brenden Legros">
                 </div>
                 <h4>PM Competition <span>&nbsp online</span></h4>
               </div>
@@ -462,7 +482,7 @@
               <div class="col-md-2"><time>2:00 PM -  3:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\anup_garg.jfif" alt="Brenden Legros">
                 </div>
                 <h4>Soft Skills <span>&nbsp L-19</span></h4>
               </div>
@@ -472,7 +492,7 @@
               <div class="col-md-2"><time>4:00 PM - 5:00 PM</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                  <img src="img\speakers\anant_ladha.png" alt="Brenden Legros">
                 </div>
                 <h4>Personal Finance<span>&nbsp L-19</span></h4>
               </div>
