--- a/index.html
+++ b/index.html
@@ -238,95 +238,85 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+              <img src="img\events\programming.webp" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a>Brenden Legros</a></h3>
-                <p>Quas alias incidunt</p>
+                <h3><a>Programming Pathshala</a></h3>
+                <p>Bharat Khanna, Anup Garg</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                  <a>Hello thi si tesvuew ehbcwdyb ehbdey  dqyub dqydq ydw</a>
+                  <a >Only having theoretical knowledge is insufficient; demonstrate your programming abilities to us.
+                    </a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
+              <img src="img\events\pm.jfif" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a>Hubert Hirthe</a></h3>
-                <p>Consequuntur odio aut</p>
+                <h3><a>Product Management</a></h3>
+                <p>Tannishk Sharma, Mohammed Hussain, Mansi Mittal</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href="">Career Connect in collaboration with PM School is organizing a competition - ”League of Leaders” related to the product management domain</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
+              <img src="img\events\crypto.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a>Cole Emmerich</a></h3>
-                <p>Fugiat laborum et</p>
+                <h3><a>Crypto Trading Hackathon</a></h3>
+                <p></p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href="">Join our Crypto Hackathon to get the latest insights on the cutting edge of this highly volatile industry</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img\events\AI.avif" alt="Speaker 4" class="img-fluid">
+              <div class="details">
+                <h3><a>Emerging AI</a></h3>
+                <p>Arijit Bhattacharyya</p>
+                <div class="social">
+                  <a href="">How will AI impact the coding industry and the jobs of software developers?
+                    How will Augmented Reality (AR) change the way we experience and interact with the world?</i></a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/4.jpg" alt="Speaker 4" class="img-fluid">
+              <img src="img\events\WomeninTech.jfif" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a>Jack Christiansen</a></h3>
-                <p>Debitis iure vero</p>
+                <h3><a>Women In Tech</a></h3>
+                <p>Anu Meena Malhotra, Shefali Vijaywargiya</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href="">There has been a meteoric rise of women in the field of technology which is only expected to rise in the years yet to come.</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
+              <img src="img\events\finance.jfif" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a>Alejandrin Littel</a></h3>
-                <p>Qui molestiae natus</p>
+                <h3><a>Mastering Money</a></h3>
+                <p>Anant Ladha</p>
                 <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+                  <a href="">gain valuable insights on how to manage your finances, save for the future, invest wisely, and much more</a>
                 </div>
               </div>
-            </div>
+            </div> 
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="speaker">
-              <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
-              <div class="details">
-                <h3><a>Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
+
+        <div style="width: 100%;display: flex; align-items: center; justify-content: center; margin-bottom: 50px;">
+          <button style="display: flex; align-items: center; justify-content: center; margin-bottom: 50px;">
+            Register Here
+          </button>
         </div>
       </div>
 
@@ -522,14 +512,13 @@
       </div>
 
       <div class="owl-carousel gallery-carousel">
-        <a href="img/gallery/1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1.jpg" alt=""></a>
-        <a href="img/gallery/2.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2.jpg" alt=""></a>
-        <a href="img/gallery/3.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3.jpg" alt=""></a>
-        <a href="img/gallery/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4.jpg" alt=""></a>
-        <a href="img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.jpg" alt=""></a>
-        <a href="img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.jpg" alt=""></a>
-        <a href="img/gallery/7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.jpg" alt=""></a>
-        <a href="img/gallery/8.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8.jpg" alt=""></a>
+        <a href="img\gallery\ph1.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph1.jpg" alt=""></a>
+        <a href="img\gallery\ph2.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph2.jpg" alt=""></a>
+        <a href="img\gallery\ph3.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph3.jpg" alt=""></a>
+        <a href="img\gallery\ph4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph4.jpg" alt=""></a>
+        <a href="img\gallery\ph5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph5.jpg" alt=""></a>
+        <a href="img\gallery\ph7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph7.jpg" alt=""></a>
+        <a href="img\gallery\ph12.jpg" class="venobox" data-gall="gallery-carousel"><img src="img\gallery\ph12.jpg" alt=""></a>
       </div>
 
     </section>
