--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   ============================-->
   <section id="intro">
     <div class="intro-container wow fadeIn">
-      <h1 class="mb-4 pb-0"><img src="img/logo_main.png" style="max-width: 800px; min-width: 300;" alt="" title=""><br> Connect</h1>
+      <h1 class="mb-4 pb-0"><img src="img/logo-main.png" style="max-width: 800px; min-width: 300;" alt="" title=""></h1>
       <p class="mb-4 pb-0">An Annual Flagship Event, 10-12 February, 2023</p>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a> -->
@@ -311,6 +311,47 @@
               </div>
             </div> 
           </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img\events\research.jfif" alt="Speaker 4" class="img-fluid">
+              <div class="details">
+                <h3><a>Master Research</a></h3>
+                <p>N. Sundararajan</p>
+                <div class="social">
+                  <a href="">Have you ever wondered How to Improve your Research Skills? You can get one step closer to that goal with this Session
+                    by esteemed NTU Retired Professor N. Sundararajan
+                  </i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img\events\unorthodox.jfif" alt="Speaker 5" class="img-fluid">
+              <div class="details">
+                <h3><a>Unorthodox Career Choices</a></h3>
+                <p>Abhishek Dhandharia, Samarth Bansal</p>
+                <div class="social">
+                  <a href="">Explore the unorthodox choices available for engineers and all others, to explore our inner passion. Have a listen 
+                    to our speakers and get a renewed perspective.</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="speaker">
+              <img src="img\events\soft.jpg" alt="Speaker 6" class="img-fluid">
+              <div class="details">
+                <h3><a>Soft Skills</a></h3>
+                <p>Divas Gupta</p>
+                <div class="social">
+                  <a href="">Soft skills are becoming increasingly important in the industry as employers are seeking individuals who possess a well-rounded set of skills and attributes</a>
+                </div>
+              </div>
+            </div> 
+          </div>
+
         </div>
 
         <div style="width: 100%;display: flex; align-items: center; justify-content: center; margin-bottom: 50px;">
