Registration links added

--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
       <div class="container">
         <div class="section-header">
           <h2>Planned Events</h2>
-          <p>We have a wide array of events planned just for you</p>
+          <p>To register for the events, click on the event you would like to participate in. You will need to register for Programming Pathshala, Crypto Hackathon,
+            Product Management Contest, and Blockchain Hackathon to participate.
+          </p>
         </div>
 
         <div class="row">
@@ -240,10 +242,10 @@
             <div class="speaker">
               <img src="img\events\programming.webp" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a>Programming Pathshala</a></h3>
+                <h3><a href="http://t.dos.lc/ppa-iit-kanpur-feb10-test">Programming Pathshala</a></h3>
                 <p>Bharat Khanna, Anup Garg</p>
                 <div class="social">
-                  <a >Only having theoretical knowledge is insufficient; demonstrate your programming abilities to us.
+                  <a href="http://t.dos.lc/ppa-iit-kanpur-feb10-test">Only having theoretical knowledge is insufficient; demonstrate your programming abilities to us.
                     </a>
                 </div>
               </div>
@@ -253,10 +255,10 @@
             <div class="speaker">
               <img src="img\events\pm.jfif" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a>Product Management</a></h3>
+                <h3><a href="https://forms.gle/Ywy6hhpy1ydcxLFr8">Product Management</a></h3>
                 <p>Tannishk Sharma, Mohammed Hussain, Mansi Mittal</p>
                 <div class="social">
-                  <a href="">Career Connect in collaboration with PM School is organizing a competition - ”League of Leaders” related to the product management domain</a>
+                  <a href="https://forms.gle/Ywy6hhpy1ydcxLFr8">Career Connect in collaboration with PM School is organizing a competition - ”League of Leaders” related to the product management domain</a>
                 </div>
               </div>
             </div>
@@ -265,10 +267,10 @@
             <div class="speaker">
               <img src="img\events\crypto.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a>Crypto Trading Hackathon</a></h3>
+                <h3><a href="http://finso.club/">Crypto Trading Hackathon</a></h3>
                 <p></p>
                 <div class="social">
-                  <a href="">Join our Crypto Hackathon to get the latest insights on the cutting edge of this highly volatile industry</a>
+                  <a href="http://finso.club/">Join our Crypto Hackathon to get the latest insights on the cutting edge of this highly volatile industry</a>
                 </div>
               </div>
             </div>
