--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
             <div class="speaker">
               <img src="img\events\AI.avif" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a>Emerging AI</a></h3>
+                <h3><a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTTT0s_tsrpHNLecrv1kRcTfLqVhC2AAhN76-HJUOmo5gxg/viewform?usp=sf_link">Blockchain Hackathon</a></h3>
                 <p>Arijit Bhattacharyya</p>
                 <div class="social">
-                  <a href="">How will AI impact the coding industry and the jobs of software developers?
-                    How will Augmented Reality (AR) change the way we experience and interact with the world?</i></a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdXTTT0s_tsrpHNLecrv1kRcTfLqVhC2AAhN76-HJUOmo5gxg/viewform?usp=sf_link">
+                    Blockchains are among the most promising new avenues in AI. Learn more about this game-changing technology, and take a small 
+                  dip into its complexity for the blockchain hackathon.</i></a>
                 </div>
               </div>
             </div>
